--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <input type="password" id="passwordInput" placeholder="Enter Name...">
             <br>
             <button class="enter-btn" onclick="checkPassword()">Enter ❤️</button>
-            <p class="error-msg" id="errorMsg">Wrong name! Try "Mila" 😉</p>
+            <p class="error-msg" id="errorMsg">Wrong name! Try "Milita" 😉</p>
         </div>
     </div>
 
@@ -396,7 +396,7 @@
             const overlay = document.getElementById('login-overlay');
 
             // CHANGE PASSWORD HERE (Case sensitive!)
-            if (input === "Mila" || input === "Amor") {
+            if (input === "Milita" || input === "Amor") {
                 // Correct Password
                 overlay.style.opacity = '0';
                 setTimeout(() => {
